...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="tsl-Nk-0bq"/>
                    </connections>
...
                                <rect key="frame" x="34" y="-59" width="0.0" height="0.0"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" size="system"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cFx-i7-0tR">
                                <rect key="frame" x="9" y="72" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="97" id="BuK-wC-xNd"/>
                                    <constraint firstAttribute="width" constant="97" id="Vic-Dz-2Xh"/>
                                    <constraint firstAttribute="height" constant="30" id="zAc-Yf-2lZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="JEX-9P-axG" id="H2H-FC-sDO"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDl-cc-IXV">
                                <rect key="frame" x="9" y="121" width="191" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="191" id="9GO-SS-YSg"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="136" y="495" width="318" height="97"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="318" id="bhb-rb-GFw"/>
                                    <constraint firstAttribute="height" constant="97" id="hd0-r1-fe2"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OXs-Q3-jwS">
                                <rect key="frame" x="121" y="72" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="97" id="V5A-Uz-jb6"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="JEX-9P-axG" id="qZw-WX-hZt"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Flickr" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GWH-mA-BMV">
                                <rect key="frame" x="9" y="183" width="191" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="191" id="gEL-HB-0AP"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="JEX-9P-axG" id="eKa-ph-2ZT"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Web Page" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AmJ-WS-8EQ">
                                <rect key="frame" x="9" y="268" width="191" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="191" id="jJ7-j3-CEK"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="499" y="267" width="70" height="30"/>
                                <state key="normal" title="Web Page"/>
                                <connections>
                                    <segue destination="swE-g0-e0l" kind="show" identifier="showWebPage" id="Pp6-vZ-0fA"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Image URL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="coO-lw-kq9">
                                <rect key="frame" x="0.0" y="457" width="580" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="JEX-9P-axG" id="315-ne-EcI"/>
                                </connections>
...
